objects/REVVY__MnQuoteItemSubLine__c.object
<CustomObject>
    <fields>
        <fullName>Award_Price__c</fullName>
        <label>Award Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>[Yuva]: Field to extract Primary Category info from product and pass it on to Quote Item Subline items</description>
        <formula>REVVY__QuoteItem__r.REVVY__PrimaryCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNet_Price_2__c</fullName>
        <description>DNet_Price_2 will be populated from within a trigger</description>
        <label>DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNet_Price__c</fullName>
        <formula>IF(

TPP_Line_Item__c = TRUE,  TPP_DNET__c * REVVY__Quantity__c,

DNet_Price_2__c *  REVVY__Quantity__c 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Store product name/description during support plus process</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exlcude Sublines from Rebate calculations</description>
        <label>Exclude from Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Award_DNet_Price__c</fullName>
        <formula>DNet_Price_2__c *  REVVY__Quantity__c * Percent_of_DNet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Award DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Award_MSRP_Price__c</fullName>
        <formula>REVVY__Price__c *  REVVY__Quantity__c *(1- Percent_Off_MSRP__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Award MSRP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Award_Price__c</fullName>
        <formula>Award_Price__c * REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Award Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_MSRP_Price__c</fullName>
        <formula>if( Performance_Part__c , REVVY__Unit_Price__c * REVVY__Quantity__c, 
REVVY__Price__c * REVVY__Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended MSRP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Percentage__c</fullName>
        <label>Fee Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSRP_Alternate_Currency__c</fullName>
        <formula>REVVY__Price__c *  REVVY__QuoteItem__r.REVVY__Quote__r.Currency_Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSRP Alternate Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Misc_Style__c</fullName>
        <description>Misc style to help some operations such as set text of a field to &quot;No Charge&quot; in client side</description>
        <label>Misc Style</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Part Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Off_MSRP__c</fullName>
        <description>Percent Off MSRP</description>
        <label>% Off MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_DNet__c</fullName>
        <description>Percent of DNet</description>
        <label>% of DNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_ID2__c</fullName>
        <label>Product ID2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID_F__c</fullName>
        <formula>REVVY__Catalog_Node__r.REVVY__Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_F__c</fullName>
        <formula>REVVY__Catalog_Node__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Item_Sub_Line_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Item Sub Line Extension</label>
        <referenceTo>REVVY__MnStrategy5__c</referenceTo>
        <relationshipLabel>Quote Item Sub Line</relationshipLabel>
        <relationshipName>Quote_Item_Sub_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_as_of_DNet__c</fullName>
        <description>Rebate as % of DNet</description>
        <label>Rebate as % of DNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Subline_Rebate__c</fullName>
        <formula>DNet_Price__c *  Rebate_as_of_DNet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subline Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Support Plus Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TPP_DNET__c</fullName>
        <label>TPP DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TPP_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TPP Line Item</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>